--- a/src/Mission/Admin/Page/@js/src/codex/admin/form/template.twig
+++ b/src/Mission/Admin/Page/@js/src/codex/admin/form/template.twig
@@ -10,6 +10,7 @@
 
 	{% for section in sections %}
 		<section>
+			{% if section.label %}<header>{{ section.label }}</header>{% endif %}
 			{% for input in section.inputs %}
 				<div class="field">
 					<label>{{ input.label }}</label>
