--- a/app/Mission/Admin/Page/@css/src/fontawesome.less
+++ b/app/Mission/Admin/Page/@css/src/fontawesome.less
@@ -1,5 +1,5 @@
 @import "@fortawesome/fontawesome-pro/less/_variables";
-@fa-font-path: "/fonts/fontawesome";
+@fa-font-path: "/~fonts/fontawesome";
 
 @import "@fortawesome/fontawesome-pro/less/brands";
 @import "@fortawesome/fontawesome-pro/less/light";
