--- a/app.mission/admin/style/app.scss
+++ b/app.mission/admin/style/app.scss
@@ -1,4 +1,4 @@
 $font-path: "/~fonts/";
 $fontawesome-path: "/~fonts/fontawesome";
-@import "./src/google-fonts";
-@import "./src/fontawesome";
+@import "src/google-fonts";
+@import "src/fontawesome";
